# text2pdf

./: .gitignore  README.md  pyproject.toml
examples/: README.md  photo-field-report.md  sample-report.md
skills/text2pdf-ai-publishing/: SKILL.md
skills/text2pdf-ai-publishing/references/: usage.md
tests/: test_cli_and_imagegen.py  test_structure.py
text2pdf/: __init__.py  __main__.py  cli.py  imagegen.py  structure.py
text2pdf/engines/: __init__.py  pandoc_engine.py  weasyprint_engine.py
text2pdf/providers/: __init__.py  gemini.py  minimax.py
text2pdf/themes/: __init__.py  academic.css  ebook.css  modern.css  report.css
